@@ -1,5 +1,11 @@
 2002-06-20  Miguel Sofer  <msofer@users.sourceforge.net>
 
+	* generic/tclBasic.c (TclEvalObjvInternal): fix for [Bug 571385]
+	in the implementation of TIP#62 (command tracing). Vince Darley,
+	Hemang Lavana & Don Porter: thanks.
+
+2002-06-20  Miguel Sofer  <msofer@users.sourceforge.net>
+
 	* generic/tclExecute.c (TclCompEvalObj): clarified and simplified
 	the logic for compilation/recompilation.
 
